# seek

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci-audit.yml  ci-rust.yml  release-plz.yml
crates/fermah-avs/: CHANGELOG.md  Cargo.toml  README.md
crates/fermah-avs/config/devnet/: avs.default.json
crates/fermah-avs/config/localnet/: avs.default.json
crates/fermah-avs/src/: avs.rs  config.rs  db.rs  error.rs  lib.rs  manifest.rs
crates/fermah-avs/src/contract/: avs.rs  el.rs  erc20.rs  fermah.rs  mod.rs  strategy.rs
crates/fermah-common/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/fermah-common/src/: executable.rs  lib.rs  manifest.rs  releaser.rs  resources.rs
crates/fermah-common/src/cli/: ascii.rs  mod.rs  prompts.rs  spinner.rs
crates/fermah-common/src/crypto/: mod.rs
crates/fermah-common/src/crypto/cipher/: aes128ctr.rs  mod.rs  plain.rs
crates/fermah-common/src/crypto/kdf/: mod.rs  scrypt.rs
crates/fermah-common/src/crypto/keystore/: mod.rs
crates/fermah-common/src/crypto/signer/: bls.rs  ecdsa.rs  mod.rs
crates/fermah-common/src/fs/: error.rs  hash.rs  json.rs  mod.rs  mountable.rs  rand.rs
crates/fermah-common/src/hash/: blake3.rs  keccak256.rs  mod.rs
crates/fermah-common/src/http/: file_download.rs  file_server.rs  mod.rs
crates/fermah-common/src/operator/: mod.rs
crates/fermah-common/src/proof/: mod.rs  request.rs  status.rs
crates/fermah-common/src/resource/: cpu.rs  gpu.rs  memory.rs  mod.rs  requirement.rs  traits.rs
crates/fermah-common/src/serialization/: bytes.rs  encoding.rs  error.rs  hash.rs  mod.rs  serializable_error.rs
crates/fermah-common/src/types/: mod.rs  network.rs  quorum.rs
crates/fermah-common/src/vec/: mod.rs
crates/fermah-config/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/fermah-config/config/localnet/: proof.cli.json  proof.default.json  proof.test.json
crates/fermah-config/keys/: seeker.json  test.key.json
crates/fermah-config/src/: error.rs  lib.rs
crates/fermah-config/src/keystore/: command.rs  error.rs  mod.rs
crates/fermah-config/src/profile/: command.rs  key.rs  mod.rs
crates/fermah-database/: CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml
crates/fermah-database/src/: avs_operators.rs  avs_proof_requesters.rs  lib.rs  mm_deadlines.rs  mm_operators.rs  mm_proof_requests.rs  models.rs  schema.rs
crates/fermah-db/: CHANGELOG.md  Cargo.toml
crates/fermah-db/src/: lib.rs
crates/fermah-rpc/: CHANGELOG.md  Cargo.toml  README.md
crates/fermah-rpc/src/: lib.rs  metrics.rs  rpc_client.rs  rpc_server.rs  upstream.rs
crates/fermah-seek/: CHANGELOG.md  Cargo.toml  README.md
crates/fermah-seek/config/devnet/: proof.aws.json  proof.default.json  proof.dummy.json  proof.gcp.json  proof.groth16.json  proof.jolt.json  proof.local.json  proof.risc0.json  proof.sp1.json  proof.stwo.json
crates/fermah-seek/config/localnet/: proof.aws.json  proof.docker.json  proof.dummy.json  proof.dummy_docker.json  proof.gcp.json  proof.groth16.json  proof.inception.json  proof.jolt.json  proof.local.json  proof.risc0.json  proof.sp1.json  proof.stwo.json  proof.valida.json
crates/fermah-seek/src/: command.rs  error.rs  lib.rs
crates/fermah-telemetry/: CHANGELOG.md  Cargo.toml  README.md  build.rs  config.alloy  docker-compose.yml
crates/fermah-telemetry/config/devnet/: telemetry.default.json  telemetry.otlp.json
crates/fermah-telemetry/config/localnet/: telemetry.default.json  telemetry.otlp.json
crates/fermah-telemetry/src/: config.rs  lib.rs  stdout.rs  tonic.rs
migrations/2024-08-26-160725_migrate_avs_proof_requesters/: down.sql  up.sql
migrations/2024-08-29-145456_migrate_matchmaker/: down.sql  up.sql
migrations/2024-08-31-221946_migrate_deadlines/: down.sql  up.sql
migrations/2024-09-11-174403_add_last_assignment/: down.sql  up.sql
