[workspace]
members = ["crates/fermah-avs", "crates/fermah-config", "crates/fermah-common", "crates/fermah-database", "crates/fermah-seek", "crates/fermah-rpc", "crates/fermah-telemetry"]
default-members = ["crates/fermah-seek"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

authors = ["Fermah Contributors"]
homepage = "https://fermah.xyz"
repository = "https://github.com/fermah/seek"
documentation = "https://docs.fermah.xyz"

keywords = ["zero-knowledge", "proofs", "crypto", "zk", "avs"]
categories = ["command-line-utilities"]

readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
fermah-avs = { path = "crates/fermah-avs", version = "0.1.3" }
fermah-config = { path = "crates/fermah-config", version = "0.2.0" }
fermah-common = { path = "crates/fermah-common", version = "0.2.0" }
fermah-database = { path = "crates/fermah-database", version = "0.1.3" }
fermah-seek = { path = "crates/fermah-seek", version = "0.2.0" }
fermah-rpc = { path = "crates/fermah-rpc", version = "0.1.3" }
fermah-telemetry = { path = "crates/fermah-telemetry", version = "0.1.3" }

# External
anyhow = { version = "1" }

ark-bls12-381 = { version = "0.4.0" }
ark-bn254 = { version = "0.4" }
ark-crypto-primitives = { version = "0.4.0" }
ark-ec = { version = "0.4" }
ark-ff = { version = "0.4" }
ark-serialize = { version = "0.4.0" }
ark-std = { version = "0.4.0" }

async-trait = { version = "0.1.79" }
bincode = "1.3.3"
blake3 = { version = "1.5.1", features = ["serde", "rayon", "mmap"] }
bytes = { version = "1.6.0" }
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
ethers = { version = "2.0.14", features = ["abigen", "ws"] }
ethers-contract = "2.0.14"
futures-util = "0.3.30"
const-hex = "1.12.0"
opentelemetry = { version = "0.23.0", features = [
    "trace",
    "metrics",
    "logs",
    "logs_level_enabled",
] }
pea2pea = "0.50.0"
rand = { version = "0.8.5" }
rand_core = "0.6.4"
reqwest = { version = "0.12.5", default-features = false, features = [
    "http2",
    "json",
    "stream",
] }

serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.119" }
serde_with = "3.8.3"

sha3 = "0.10.8"

sled = "0.34.7"

strum = { version = "0.26.2", features = ["derive"] }
thiserror = { version = "1.0.61" }

tempfile = "3.10.1"

tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

termion = "4.0.2"
indicatif = "0.17.8"

url = { version = "2.5.2", features = ["serde"] }

uuid = { version = "1.8.0", features = ["v4", "serde"] }

zeroize = { version = "1.8.1", features = ["alloc", "derive"] }

zip = "2.1.3"
zip-extensions = "0.8.0"

rust_decimal = { version = "1.36.0", features = ["db-diesel-postgres"] }
