[package]
name = "fermah-common"
description = "Fermah common utilities and types."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

authors = ["Fermah Contributors"]
homepage = "https://fermah.xyz"
repository = "https://github.com/fermah-xyz/seek"
documentation = "https://docs.fermah.xyz"

keywords = ["zero-knowledge", "proofs", "crypto", "zk", "avs"]
categories = ["command-line-utilities"]

license = "MIT OR Apache-2.0"

[features]
default = []
dockerized = []

[dependencies]
# workspace dependencies
ark-ec = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }

bytes = { workspace = true }
tokio = { workspace = true }
ethers = { workspace = true }
blake3 = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
const-hex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
termion = { workspace = true }
serde_with = { workspace = true }
sha3 = { workspace = true }
strum = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

bincode = { workspace = true }

base64 = "0.22.1"

home = "0.5.9"
rpassword = "7.3.1"

aes = "0.8.4"
ctr = { version = "0.9.2" }
scrypt = "0.11.0"

[dependencies.warp]
version = "0.3.7"
features = ["tokio-rustls"]
default-features = false

[dependencies.hyper]
version = "*"
default-features = false
features = ["stream", "http2", "tcp", "server"]

# Adds features to ethers k256 dependency
[dependencies.k256]
version = "*"
features = ["default"]

[dependencies.cipher]
version = "*"
features = ["std"]

[build-dependencies]
vergen = { version = "9.0.0", features = ["build", "cargo", "rustc", "si"] }
anyhow = { workspace = true }