[package]
name = "fermah-database"
description = "Fermah database for AVS."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

authors = ["Fermah Contributors"]
homepage = "https://fermah.xyz"
repository = "https://github.com/fermah-xyz/seek"
documentation = "https://docs.fermah.xyz"

keywords = ["zero-knowledge", "proofs", "crypto", "zk", "avs"]
categories = ["command-line-utilities"]

license = "MIT OR Apache-2.0"

[features]
default = []
database_test = []

[dependencies]
diesel = { version = "2.2.3", features = [
    "postgres",
    "r2d2",
    "numeric",
    "chrono",
] }
ethers = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }
fermah-common = { workspace = true }
fermah-telemetry = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
thiserror.workspace = true
bigdecimal = "0.4.5"
