[package]
name = "fermah-db"
description = "Fermah in memory database."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

authors = ["Fermah Contributors"]
homepage = "https://fermah.xyz"
repository = "https://github.com/fermah-xyz/seek"
documentation = "https://docs.fermah.xyz"

keywords = ["zero-knowledge", "proofs", "crypto", "zk", "avs"]
categories = ["command-line-utilities"]

license = "MIT OR Apache-2.0"

[dependencies]
fermah-common = { workspace = true }

anyhow = { workspace = true }
blake3 = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
ethers = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sled = { workspace = true }
tracing = { workspace = true }
